--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,8 @@ downloader = "0.2"
 
 # Used to generate the HTML page to easily preview your exported data
 minijinja = "2.0"
+
+# Used to communicate with the Dalamud plugin
+# Needs my fork for allowing server shutdown
+# TODO: upstream this or poke upstream to add this
+touche = { git = "https://github.com/redstrate/touche" }
