--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 description = "Export your FFXIV character in portable, generic formats"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 # Used to scrape the Lodestone HTML pages
 scraper = "0.20"
@@ -19,9 +22,6 @@ regex = "1.11"
 clap = { version = "4.5", features = ["derive"] }
 clap_derive = "4.5"
 
-# Download HTML pages, images, etc
-downloader = "0.2"
-
 # Used to generate the HTML page to easily preview your exported data
 minijinja = "2.0"
 
@@ -29,3 +29,13 @@ minijinja = "2.0"
 # Needs my fork for allowing server shutdown
 # TODO: upstream this or poke upstream to add this
 touche = { git = "https://github.com/redstrate/touche" }
+
+# Not used directly by us, but to disable the "std" feature and is used by the scraper crate.
+ahash = { version = "0.8.0", default-features = false }
+
+# Ditto, but used by the ahash crate.
+getrandom = { version = "0.2", features = ["js"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+# Download HTML pages, images, etc
+downloader = "0.2"
