Add Qt UI and add a separate CLI target
The Qt UI is basic for now, to be expanded upon later - but it does
work!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,15 @@ description = "Export your FFXIV character in portable, generic formats"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "cli"
+required-features = ["cli"]
+
+[[bin]]
+name = "ui"
+required-features = ["ui"]
+
 [features]
 # Builds the Qt UI for Auracite
 ui = []# ["cxx-qt-build", "cxx-qt", "cxx-qt-lib", "cxx-kde-frameworks"]
