--- a/dalamud/Auracite/Auracite.csproj
+++ b/dalamud/Auracite/Auracite.csproj
@@ -6,4 +6,8 @@
         <Version>1.0.0.0</Version>
         <RootNamespace>NeoVARC</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="EmbedIO" Version="3.5.2" />
+    </ItemGroup>
 </Project>
