--- a/dalamud/Auracite/Auracite.csproj
+++ b/dalamud/Auracite/Auracite.csproj
@@ -9,5 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="EmbedIO" Version="3.5.2" />
+      <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     </ItemGroup>
 </Project>
