--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  QT_VERSION: 6.6
 
 jobs:
   build:
@@ -25,6 +26,12 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v3
+        with:
+          version: "${{ env.QT_VERSION }}.*"
+          cache: true
+          modules: 'qtshadertools'
       - name: Build
         run: cargo build --verbose
       - name: Run clippy
