--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           modules: 'qtshadertools'
       - name: Setup Linux dependencies
         run: |
-          sudo apt-get update \
+          sudo apt-get update
           sudo apt-get install \
             libkf6coreaddons-dev \
             libkf6i18n-dev \
