Build KCrash on the CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,12 @@ jobs:
           git clone https://invent.kde.org/frameworks/kcoreaddons.git
           cmake -B ${{ steps.strings.outputs.build-output-dir }}-kca -DCMAKE_PREFIX_PATH=${{ steps.strings.outputs.prefix-dir }} -S kcoreaddons -DCMAKE_INSTALL_PREFIX=${{ steps.strings.outputs.prefix-dir }} -DBUILD_TESTING=OFF
           cmake --build ${{ steps.strings.outputs.build-output-dir }}-kca --target install
+      - name: Build KCrash
+        if: steps.cache-prefix-restore.outputs.cache-hit != 'true'
+        run: |
+          git clone https://invent.kde.org/frameworks/kcrash.git
+          cmake -B ${{ steps.strings.outputs.build-output-dir }}-kcrash -DCMAKE_PREFIX_PATH=${{ steps.strings.outputs.prefix-dir }} -S kcrash -DCMAKE_INSTALL_PREFIX=${{ steps.strings.outputs.prefix-dir }} -DBUILD_TESTING=OFF
+          cmake --build ${{ steps.strings.outputs.build-output-dir }}-kcrash --target install
       - name: Save Prefix
         id: cache-prefix-save
         uses: actions/cache/save@v4
