Set CMAKE_PREFIX_PATH in clippy as well

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,9 +151,9 @@ jobs:
           key: ${{ steps.cache-prefix-restore.outputs.cache-primary-key }}
       - name: Build
         run: |
-          export KDE_INCLUDEDIR=${{ github.workspace }}/prefix/include
-          export KDE_LIBDIR=${{ github.workspace }}/prefix/lib/x86_64-linux-gnu
           export CMAKE_PREFIX_PATH=${{ github.workspace }}/prefix/lib/x86_64-linux-gnu/cmake
           cargo build --verbose
       - name: Run clippy
-        run: cargo clippy
+        run: |
+          export CMAKE_PREFIX_PATH=${{ github.workspace }}/prefix/lib/x86_64-linux-gnu/cmake
+          cargo clippy
