--- a/dalamud/Auracite/Auracite.csproj
+++ b/dalamud/Auracite/Auracite.csproj
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="Dalamud.Plugin.Bootstrap.targets"/>
+<Project Sdk="Dalamud.NET.SDK/12.0.2">
 
     <PropertyGroup>
-        <Version>1.3.0.0</Version>
+        <Version>1.4.0.0</Version>
         <RootNamespace>NeoVARC</RootNamespace>
     </PropertyGroup>
 
