--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,13 @@ serde = { version = "1.0", features = ["derive"], default-features = false }
 regex = { version = "1.11", default-features = false, features = ["unicode-perl"] }
 
 # Used to generate the HTML page to easily preview your exported data
-minijinja = { version = "2.9", default-features = false }
+minijinja = { version = "2.11", default-features = false }
 
 # Download files
 reqwest = { version = "0.12" }
 
 # Zip the character archive
-zip = { version = "2.5", default-features = false }
+zip = { version = "4.2", default-features = false }
 
 # Exporting propietary game data
 physis = { git = "https://github.com/redstrate/Physis" }
@@ -42,10 +42,7 @@ physis = { git = "https://github.com/redstrate/Physis" }
 base64 = { version = "0.22", default-features = false }
 
 # Not used directly by us, but to disable the "std" feature and is used by the scraper crate.
-ahash = { version = "0.8.1", default-features = false }
-
-# Ditto, but used by the ahash crate.
-getrandom = { version = "0.2", features = ["js"], default-features = false }
+ahash = { version = "0.8", default-features = false }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 # Used to generate the WebAssembly version
@@ -53,15 +50,18 @@ wasm-bindgen = { version = "0.2", default-features = false }
 wasm-bindgen-futures = { version = "0.4", default-features = false }
 
 # For async
-tokio = { version = "1.44", features = ["rt", "macros"], default-features = false }
+tokio = { version = "1.45", features = ["rt", "macros"], default-features = false }
 
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 console_error_panic_hook = { version = "0.1.7", optional = true }
 
+# to fix some dependency that doesn't enable the feature
+getrandom = { version = "0.3", features = ["wasm_js"] }
+
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For async
-tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
+tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
 
 # Used for the Qt UI
 cxx = { version = "1.0", default-features = false }
